Enforce handshake before any other packets