@@ -41,6 +41,7 @@ subprojects {
         withType<JavaCompile>().configureEach {
             options.encoding = Charsets.UTF_8.name()
             options.release.set(17)
+            options.compilerArgs.add("--enable-preview")
         }
 
         withType<Javadoc>().configureEach {
